 #
 # This file is part of libhistoryrpki
 #
 # Freie Universität, Berlin
 # s.al-sheikh@fu-berlin.de
 #
 # All rights reserved, Freie Universität Berlin, 14195 Berlin.
 # Author: Samir Al-Sheikh
 #
 # This program is free software; you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
 # Foundation; either version 2 of the License, or (at your option) any later
 # version.
 #
 # This program is distributed in the hope that it will be useful, but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 # FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 # details.
 #
 # You should have received a copy of the GNU General Public License along with
 # this program.  If not, see <http://www.gnu.org/licenses/>.
 #

AM_CPPFLAGS =

noinst_LTLIBRARIES = libjsmn.la

libjsmn_la_SOURCES = \
	jsmn.c jsmn.h

ACLOCAL_AMFLAGS = -I m4

CLEANFILES = *~
